Official WinUAE Help Changelog
==============================

Georg:
------
* Created Subversion repository to enable access for contributors
* Fixed up internal hyperlinks and insane external ones
* Made all pages HTML4 compliant, optimized HTML structure
* New screenshots, saving 200kB overall filesize
* Various fixes in texts and layout changes
* Moved ADF to Disk section to transdisk page
* Updated first time users page for use with new quickstart feature
* Cleaned up and updated GUI chipset settings description
* Added hardware and host sections to align help layout with actual GUI style
* Created new subsection containing usage tips
* Moved FAQ and Amiga Programs pages to tips section
* Merged in new information from Bernd Roesch
* Fixed page not found errors when help was called from more recent WinUAE GUI pages


Peter:
------
* Updated FAQ page