@@ -1,5 +1,5 @@
 .text {
- 	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: small;
 	text-align: justify;
 }
@@ -35,15 +35,15 @@
 	font-variant: normal;
 }
 .site {
-    color: white;
+	color: white;
 	background-color: black;
 }
 a:hover {
 	background-color: #FB9B05;
 }
 a:link {
-  color: #FBF8F8;
+	color: #FBF8F8;
 }
 a:visited {
-  color: white;
+	color: white;
 }
