@@ -13,7 +13,7 @@
 <p class="text">&nbsp;</p>
 <p class="headline2">Subsections</p>
 <ul>
-  <li class="text"><a href="../tips/faq.htm">FAQ</a></li>
+  <li class="text"><a href="amigados.htm">AmigaDOS Commands</a></li>
   <li class="text"><a href="hardware.htm">Amiga Hardware</a></li>
   <li class="text"><a href="uaepeople.htm">UAE People</a></li>
 </ul>
