@@ -31,9 +31,9 @@
   <li class="text"><strong>68040</strong> can be enabled since the JIT patches
     were added to WinUAE.</li>
 </ul>
-<p><strong>More compatible</strong> is only available when the CPU type is a <strong>68000</strong>.
+<p class="text"><strong>More compatible</strong> is only available when the CPU type is a <strong>68000</strong>.
   Some games and demos require this setting for proper compatibility.</p>
-<p><strong>JIT</strong> can be enabled to access the Advanced JIT settings (See
+<p class="text"><strong>JIT</strong> can be enabled to access the Advanced JIT settings (See
   below).</p>
 <p class="text">&nbsp;</p>
 <p class="headline2">CPU Emulation Speed</p>
@@ -51,11 +51,11 @@
     Some games and demos require this setting to be adjusted. This setting is
     the only CPU setting which can be changed once WinUAE is running.</li>
 </ul>
-<p><strong>CPU Idle </strong>You can adjust the idle status of the CPU with this
+<p class="text"><strong>CPU Idle </strong>You can adjust the idle status of the CPU with this
   slider.</p>
 <p class="text">&nbsp;</p>
 <p class="headline2">JIT Settings</p>
-<p>Due to the importance of the JIT engine and its complexity, it has its own <a href="../emulation/jit.htm">page</a> where
+<p class="text">Due to the importance of the JIT engine and its complexity, it has its own <a href="../emulation/jit.htm">page</a> where
   you will find a description of its possibilities.</p>
 </body>
 </html>
