@@ -7,24 +7,23 @@
 </head>
 <body class="site">
 <p class="headline1">Filter</p>
-<p>The OpenGL screen now provides 3D display support from the Windows OpenGL
+<p class="text">The OpenGL screen now provides 3D display support from the Windows OpenGL
   drivers and can be configured via this screen. Here, you can change the size
   and position of the Amiga screen, useful for games with limited resolutions.</p>
 <p align="center"><img src="filter.gif" alt="WinUAE - Filter"></p>
-<p align="left">Tick the <strong>Enable</strong> box to enable Filter support.</p>
-<p align="left">You can specify whether to use <strong>Null Filter, Direct3D,
+<p align="left" class="text">Tick the <strong>Enable</strong> box to enable Filter support.</p>
+<p align="left" class="text">You can specify whether to use <strong>Null Filter, Direct3D,
     OpenGL, Scale2X, SuperEagle, Super2XSal or 2xSal</strong> graphics support
     with <strong>Nofilter</strong> or <strong>Bilinear</strong> graphics in either
-    16 or 32 bit modes.<br>
-</p>
-<p align="left">The <strong>Horizontal and Vertical Sizes </strong>can be specified
+    16 or 32 bit modes.</p>
+<p align="left" class="text">The <strong>Horizontal and Vertical Sizes </strong>can be specified
   from -50 to 50.</p>
-<p align="left">The <strong>Horizontal and Vertical Positions </strong>can be
+<p align="left" class="text">The <strong>Horizontal and Vertical Positions </strong>can be
   specified from -50 to 50.</p>
-<p align="left">The <strong>Scanlines</strong> can be specified from 1:1 to 3:3
+<p align="left" class="text">The <strong>Scanlines</strong> can be specified from 1:1 to 3:3
   and from 0 to 100.</p>
-<p align="left"><strong>Scanline Brightness</strong> can be specified from 0
+<p align="left" class="text"><strong>Scanline Brightness</strong> can be specified from 0
   to 100.</p>
-<p align="left">Best results can be set by using low resolution and disable line-doubling.</p>
+<p align="left" class="text">Best results can be set by using low resolution and disable line-doubling.</p>
 </body>
 </html>
