@@ -7,7 +7,7 @@
 </head>
 <body class="site">
 <p class="headline1">Output</p>
-<p>The Output tab allows you record video and audio (from selected Codec's) to
+<p class="text">The Output tab allows you record video and audio (from selected Codec's) to
   an AVI file.</p>
 <p align="center"><img src="output.gif" alt="WinUAE - Output"></p>
 <p class="text"><strong>Output</strong> Name of output file to save to (default
