@@ -18,11 +18,11 @@
   to PC Lotus 2 serial link problems when using serial port.</p> 
 <p class="text">&nbsp;</p> 
 <p class="headline2">MIDI In/Out</p> 
-<p>Here you can select the MIDI - device(s) to be used. Only available when the
+<p class="text">Here you can select the MIDI - device(s) to be used. Only available when the
   Serial- emulation is enabled.</p> 
 <p class="text">&nbsp;</p> 
 <p class="headline2">Printer</p> 
-<p>This lets you specify which PC installed printer you want to use for printing
+<p class="text">This lets you specify which PC installed printer you want to use for printing
   for the &quot;Amiga&quot;.</p> 
 <p class="text">&nbsp;</p> 
 <p class="headline2">Amiga Mouse Port 0 / 1</p> 
