@@ -23,19 +23,20 @@
   transdisk &gt;ram:DF0_3.adf -s 40 -e 59<br>
   transdisk &gt;ram:DF0_4.adf -s 60 -e 79<br>
 </p>
-After you copied the files to your PC, you have to merge them again. To do so
-in the DOS - prompt:
+<p class="text">After you copied the files to your PC, you have to merge them
+  again. To do so in the DOS prompt:</p>
 <p class="textmenu">COPY /B DF0_1.adf+DF0_2.adf+DF0_3.adf+DF0_4.adf DF0.adf</p>
 <p class="text">&nbsp;</p>
 <p class="headline2">ADF to Disk</p>
-<p class="text">It is possible to transfer an ADF disk image back to an original Amiga disk.
-  Copy the ADF to an original Amiga and insert a disk into DF0. Then, you will
-also need transdisk in order to transfer the data to the disk. Do the following:</p>
+<p class="text">It is possible to transfer an ADF disk image back to an original
+  Amiga disk. Copy the ADF to an original Amiga and insert a disk into DF0. Then,
+  you will also need transdisk in order to transfer the data to the disk. Do
+  the following:</p>
 <p class="textmenu">transdisk -w filename.adf</p>
-<p class="text">If you do not have an Amiga to write to Amiga disks, then it is suggested
-  to get hold of the PCI Catweasel device which will allow you to write ADF files
-  to Amiga formatted disks on your PC. See <a href="http://www.jschoenfeld.com/indexe.html">Individual
-Computers</a> for more information.</p>
+<p class="text">If you do not have an Amiga to write to Amiga disks, then it
+  is suggested to get hold of the PCI Catweasel device which will allow you to
+  write ADF files to Amiga formatted disks on your PC. See <a href="http://www.jschoenfeld.com/indexe.html">Individual
+  Computers</a> for more information.</p>
 <p class="text">You can also get direct access to an Amiga's floppy drive if
   you have your PC and Amiga networked and using the <a href="../links.htm">Amiga
   Explorer</a> supplied with Cloanto's Amiga Forever software.</p>
