@@ -146,24 +146,24 @@
   use<br>
   a filesystem called Joliet for long filenames. CacheCDFS can read all these
   formats. </p>
-<p>There are two ways to access Amiga CD disks: insert the CD into your CD drive,
+<p class="text">There are two ways to access Amiga CD disks: insert the CD into your CD drive,
   on the Hard Drive screen of Winuae, click 'Add Directory' <br>
   and then enter the volume name of the CD and the drive letter of the CD ROM
   drive e.g. D: (without the slash). Use the Diskchange &lt;device&gt; <br>
   command in a Shell if you change CDs (type Info for list of devices).</p>
-<p>With Winuae 0.8.21 or later you can install the CacheCDFS CDROM drivers from
+<p class="text">With Winuae 0.8.21 or later you can install the CacheCDFS CDROM drivers from
   either AmigaOS3.9 CD or a third party driver such as<br>
   AmiCDFS. You need to enable uaescsi.device on the Misc tab before starting
   Winuae and enable Logging to determine the Unit<br>
   numbers (see winuaelog.txt file) for your CDROM drive. When you install the
   drive make sure the device is uaescsi.device and the unit numbers <br>
   match the unit numbers in the log file.</p>
-<p>Example if you have only an IDE controller:</p>
-<p> 0=Primary Master<br>
+<p class="text">Example if you have only an IDE controller:</p>
+<p class="text"> 0=Primary Master<br>
   1=Secondary Master</p>
-<p>On Win9x/ME (with Adaptec ASPI which is installed by almost all CD burning
-  software solutions) you can not use CD burning programs like MakeCD. When you
-  use WinXP, it is best to switch off &quot;Use ASPI Scsi Layer&quot; the <a href="../gui/misc.htm">Misc
+<p class="text">On Win9x/ME (with Adaptec ASPI which is installed by almost
+    all CD burning software solutions) you can not use CD burning programs like
+    MakeCD. When you use WinXP, it is best to switch off &quot;Use ASPI Scsi Layer&quot; the <a href="../gui/misc.htm">Misc
   settings</a> page. Only activate it if you notice problems without it.</p>
 <p class="text">&nbsp;</p>
 <p class="headline3">What limitations can I expect from using WinUAE?</p>
@@ -181,11 +181,10 @@
   in WinUAE.</p>
 <p class="text">&nbsp;</p>
 <p class="headline3">How do I create a blank disk for saving files or games?</p>
-<p>For WinUAE, goto <strong>Floppies</strong> tab and click on 'Create Blank
+<p class="text">For WinUAE, goto <strong>Floppies</strong> tab and click on 'Create Blank
   Floppy' button in 0.8.8 or click 'Create Standard Floppy' for use in Workbench
   or use 'Create Custom Floppy' for some games to save files to.<br>
-  For specific save game disks visit <a href="http://www.back2roots.org/Games/Savedisks/" target="_top"> Back
-  2 Roots - Savedisks</a>.</p>
+  For specific save game disks visit <a href="http://www.back2roots.org/Games/Savedisks/">Back2Roots - Savedisks</a>.</p>
 <p class="text">&nbsp;</p>
 <p class="headline3">I have all my floppy drives full how do I change disks?</p>
 <p class="text">Press END key and either F1, F2, F3, F4 to do a disk change.<br>
@@ -292,16 +291,15 @@
 <p class="text">&nbsp;</p>
 <p class="headline3">Where can I download a good Workbench set up from with useful
   programs?</p>
-<p>Get Amiga In a Box from <a href="http://aiab.emuunlim.com/">AIAB</a> which
+<p class="text">Get Amiga In a Box from <a href="http://aiab.emuunlim.com/">AIAB</a> which
   includes Scalos (Workbench replacement), MUI 3.8, Picasso96, NewIcons, VisualPrefs,
   MCP, MUI tools and Screentab. There are addons for Music, Internet, Languages
   and Shapeshifter.</p>
 <p class="text">When I run WinUAE, I get an error DINPUT8.DLL not found?</p>
-<p>You need <a href="../links.htm">DirectX 8</a> or later installed. Run DXDiag.exe
+<p class="text">You need <a href="../links.htm">DirectX 8</a> or later installed. Run DXDiag.exe
   to see what version you have installed.<br>
   Windows 98 comes with DX6, Windows 2000 comes with DX7 and Windows XP comes
-  with DX8.1.<br>
-</p>
+  with DX8.1.</p>
 <p class="text">&nbsp;</p>
 <p class="headline3">How do I create a bootable floppy (real or ADF)?</p>
 <p class="text">Boot off your Workbench disk, insert a floppy disk in DF1:, open
